k8s/my-operator/generated-yamls/session-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-01-12T11:52:35Z"
  generation: 1
  labels:
    app: bartu-demo-ws-95474d16-0681-4f99-9d65-30611b8f5917
    app.kubernetes.io/component: session
    app.kubernetes.io/part-of: theia-cloud
    theia-cloud.io/app-definition: henkan-designer
    theia-cloud.io/session: bartu-demo-ws
    theia-cloud.io/user: bartu
  name: session-bartu-henkan-designer-30611b8f5917
  namespace: default
  ownerReferences:
    - apiVersion: theia.cloud/v1beta8
      blockOwnerDeletion: true
      controller: true
      kind: Session
      name: bartu-demo-ws
      uid: 95474d16-0681-4f99-9d65-30611b8f5917
  resourceVersion: "300436"
  uid: 91a686a4-d458-4228-a279-b74c07e5cf7a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bartu-demo-ws-95474d16-0681-4f99-9d65-30611b8f5917
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubernetes.io/egress-bandwidth: 30000k
        kubernetes.io/ingress-bandwidth: 30000k
      creationTimestamp: null
      labels:
        app: bartu-demo-ws-95474d16-0681-4f99-9d65-30611b8f5917
        app.kubernetes.io/component: session
        app.kubernetes.io/part-of: theia-cloud
        theia-cloud.io/app-definition: henkan-designer
        theia-cloud.io/session: bartu-demo-ws
        theia-cloud.io/user: bartu
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - --config=/etc/oauth2-proxy.cfg
            - --authenticated-emails-file=/emails/authenticated-emails-list
            - --gcp-healthchecks
            - --reverse-proxy
            - --skip-auth-route=/monitor/*
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
          imagePullPolicy: IfNotPresent
          name: oauth2-proxy
          ports:
            - containerPort: 5000
              name: web
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/oauth2-proxy.cfg
              name: oauth2-proxy-config
              subPath: oauth2-proxy.cfg
            - mountPath: /templates
              name: oauth2-templates
            - mountPath: /emails
              name: oauth2-emails
        - env:
            - name: THEIACLOUD_APP_ID
              value: henkan
            - name: THEIACLOUD_SERVICE_URL
              value: http://session-bartu-henkan-designer-30611b8f5917:3000
            - name: THEIACLOUD_SESSION_UID
              value: 95474d16-0681-4f99-9d65-30611b8f5917
            - name: THEIACLOUD_SESSION_NAME
              value: bartu-demo-ws
            - name: THEIACLOUD_SESSION_USER
              value: bartu
            - name: THEIACLOUD_SESSION_URL
              value: http://theia.localtest.me/95474d16-0681-4f99-9d65-30611b8f5917/
            - name: THEIACLOUD_SESSION_SECRET
              value: henkansecret
            - name: THEIACLOUD_KEYCLOAK_URL
              value: http://192.168.10.101:8080/auth/
            - name: THEIACLOUD_KEYCLOAK_REALM
              value: henkan
            - name: THEIACLOUD_KEYCLOAK_CLIENT_ID
              value: henkan-designer
            - name: COMMIT_GENAI_ENDPOINT
              value: https://example.com/webhook/xyz
            - name: EMAIL
              value: bartu.kacar@globalmaksimum.com
            - name: GIT_AUTHOR_NAME
              value: bartu405
            - name: GIT_SSL_NO_VERIFY
              value: "true"
            - name: HENKAN_GIT_EMAIL
              value: bartu.kacar@globalmaksimum.com
            - name: HENKAN_GIT_USER
              value: bartu
            - name: HENKAN_META_API_URL
              value: http://henkan-metaapi.henkan-metaapi
            - name: HENKAN_PROJECT_GIT_URL
              value: https://github.com/GlobalMaksimum/henkan-etl-flow-project.git
            - name: HENKAN_PROJECT_NAME
              value: busra
          image: ghcr.io/eclipse-theia/theia-blueprint/theia-ide:latest
          imagePullPolicy: IfNotPresent
          name: henkan-designer
          ports:
            - containerPort: 3000
              name: application
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 1200Mi
            requests:
              cpu: 100m
              memory: 1000Mi
          securityContext:
            runAsGroup: 101
            runAsUser: 101
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /home/henkan/project
              name: workspace
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 101
      serviceAccount: designer
      serviceAccountName: designer
      terminationGracePeriodSeconds: 30
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: ws-bartu-henkan-designer-e6585688027a
        - configMap:
            defaultMode: 420
            name: session-proxy-bartu-henkan-desi-30611b8f5917
          name: oauth2-proxy-config
        - configMap:
            defaultMode: 420
            name: oauth2-templates
          name: oauth2-templates
        - configMap:
            defaultMode: 420
            name: session-email-bartu-henkan-desi-30611b8f5917
          name: oauth2-emails
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2026-01-12T11:52:37Z"
      lastUpdateTime: "2026-01-12T11:52:37Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-01-12T11:52:35Z"
      lastUpdateTime: "2026-01-12T11:52:37Z"
      message: ReplicaSet "session-bartu-henkan-designer-30611b8f5917-5547f87d59" has
        successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
