k8s/my-operator/generated-yamls/session-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2026-01-12T11:52:35Z"
  labels:
    app: bartu-demo-ws-95474d16-0681-4f99-9d65-30611b8f5917
    app.kubernetes.io/component: session
    app.kubernetes.io/part-of: theia-cloud
    theia-cloud.io/app-definition: henkan-designer
    theia-cloud.io/session: bartu-demo-ws
    theia-cloud.io/user: bartu
  name: session-bartu-henkan-designer-30611b8f5917
  namespace: default
  ownerReferences:
    - apiVersion: theia.cloud/v1beta8
      blockOwnerDeletion: true
      controller: true
      kind: Session
      name: bartu-demo-ws
      uid: 95474d16-0681-4f99-9d65-30611b8f5917
  resourceVersion: "300406"
  uid: 47d64f35-9710-41aa-9822-98578f2f6b69
spec:
  clusterIP: 10.108.223.209
  clusterIPs:
    - 10.108.223.209
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: web
  selector:
    app: bartu-demo-ws-95474d16-0681-4f99-9d65-30611b8f5917
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
