k8s/my-operator/generated-yamls/shared-ingress.yaml
# Example generated ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"1m","nginx.ingress.kubernetes.io/proxy-buffer-size":"128k","nginx.ingress.kubernetes.io/rewrite-target":"/$2"},"name":"henkan-designer-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"theia.localtest.me"}]}}
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: "2026-01-14T09:53:28Z"
  generation: 2
  name: henkan-designer-ingress
  namespace: default
  ownerReferences:
    - apiVersion: theia.cloud/v1beta10
      kind: AppDefinition
      name: henkan-designer
      uid: d3864fea-ef1f-47de-9c02-d1d7ff555949
  resourceVersion: "322865"
  uid: 453517ab-5be7-4743-b87a-98ff5beab27b
spec:
  ingressClassName: nginx
  rules:
    - host: theia.localtest.me
    - host: theia.localtest.me
      http:
        paths:
          - backend:
              service:
                name: session-bartu-henkan-designer-5d653a8277ba
                port:
                  number: 3000
            path: /28dd211f-a05c-4791-a15c-5d653a8277ba(/|$)(.*)
            pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
      - hostname: localhost
